--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "neetcode_clone",
+  
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,8 +18,5 @@
   "bugs": {
     "url": "https://github.com/neharikatappetla/neetcode_clone/issues"
   },
-  "homepage": "https://github.com/neharikatappetla/neetcode_clone#readme",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+  "homepage": "https://github.com/neharikatappetla/neetcode_clone#readme"
 }
