--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "neetcode_clone",
-  
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -18,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/neharikatappetla/neetcode_clone/issues"
   },
-  "homepage": "https://github.com/neharikatappetla/neetcode_clone#readme"
+  "homepage": "https://github.com/neharikatappetla/neetcode_clone#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
